# ACM_Template

./: CMakeLists.txt  README.md  out.txt
Atcoder/: ABC163F.cpp  abc250E.cpp  abc265F.cpp
Codeforces/: cf873B2.cpp  cfeduD.cpp
DailyTraining/: A.cpp  B.cpp  C.cpp  F.cpp  Polynomial.cpp  Polynomial1.cpp  TEST.cpp  data1.txt  data2.txt  newk2J.cpp
Template/: AnyModulusFFT.md  BSGS.md  Combination.cpp  FHQTreap.md  HLD.md  KMP.md  LazySegmentTree.cpp  LazySegmentTree.md  LowestCommonAncestor.md  MTT.md  Manacher.md  MaxFlow.cpp  Miller_Rabin.cpp  MobiusFunction.cpp  MobiusFunction.md  PointDivision.cpp  PointDivision.md  Pollard_rho.cpp  PresidentSegmentTree.cpp  PresidentSegmentTree.md  SPFA.md  ST.cpp  SegmentTree.cpp  Splay.cpp  StringHash.md  StronglyConnectedComponents.cpp  StronglyConnectedComponents.md  Trie.md  WeightDSU.cpp  WeightDSU.md  poly2.cpp  poly2.md
Template_cpp/: BitTrie.md  BlockCutTree.md  Combination.md  CutPoint.md  Euclid_like.md  Fenwick.md  Geometry.md  Hash.md  KMP.md  Miller_Rabin.md  MinCostFlow.md  Pollard_rho.md  PresidentSegmentTree.md  RMQ.md  SegmentTree.md  Splay.md  Trie.md  TwoSet.md  dp_trick.md  geometry.md
Template_go/: Combination.md  HLD.md  LazySegmentTree.md  LinearBasis.md
Test/: Checker.cpp  Generator.cpp  myCode.cpp  std.cpp
cpp_templates/: geometry.md
model/: AnyModulusFFT.cpp  AnyModulusFFT.md  BSGS.cpp  BSGS.md  BlockCutTree.md  Combination.cpp  Combination.md  Dijkstra.cpp  Dijkstra.md  Euclid_like.cpp  Euclid_like.md  EulerFunction.cpp  EulerFunction.md  ExCRT.cpp  ExCRT.md  ExGcd.cpp  ExGcd.md  Exgcd.md  (+42 more)
(+68 files in other folders)
